--- a/v2ex/ChangeLog
+++ b/v2ex/ChangeLog
@@ -1,8 +1,13 @@
-2014.7.31 v0.1.0
-初始版本，能够模拟签到，查看签到记录，fix #4
+2015.01.27 v0.2.2
+解决突然不能得到 money 的问题,fix #16
 
-2014.9.2 v0.2.0
+2014.09.02 v0.2.1
+解决了InsecureRequestWarning 的问题，fix #9
+
+2014.09.02 v0.2.0
 增加了查询连续签到天数的功能，fix #8
 
-2014.9.2 v0.2.1
-解决了InsecureRequestWarning 的问题，fix #9
+2014.07.31 v0.1.0
+初始版本，能够模拟签到，查看签到记录，fix #4
+
+
